--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <%- body -%>
+    <% nav %>
+    <% body %>
 
 </body>
 </html>
